# swagger.yaml
@@ -1,7 +1,7 @@
-swagger: '2.0'
+swagger: "2.0"
 info:
   description: Api Documentation
-  version: '1.0'
+  version: "1.0"
   title: Api Documentation
   termsOfService: urn:tos
   contact: {}
@@ -29,19 +29,19 @@ paths:
       summary: findAll
       operationId: findAllUsingGET
       produces:
-        - '*/*'
+        - "*/*"
       responses:
-        '200':
+        "200":
           description: OK
           schema:
             type: array
             items:
-              $ref: '#/definitions/Customer'
-        '401':
+              $ref: "#/definitions/Customer"
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
   /customer/save:
@@ -53,28 +53,28 @@ paths:
       consumes:
         - application/json
       produces:
-        - '*/*'
+        - "*/*"
       parameters:
         - in: body
           name: model
           description: model
           required: true
           schema:
-            $ref: '#/definitions/CustomerFrom'
+            $ref: "#/definitions/CustomerFrom"
       responses:
-        '200':
+        "200":
           description: OK
           schema:
             type: object
             additionalProperties:
               type: object
-        '201':
+        "201":
           description: Created
-        '401':
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
   /customer/{id}:
@@ -84,7 +84,7 @@ paths:
       summary: findById
       operationId: findByIdUsingGET
       produces:
-        - '*/*'
+        - "*/*"
       parameters:
         - name: id
           in: path
@@ -93,15 +93,15 @@ paths:
           type: integer
           format: int32
       responses:
-        '200':
+        "200":
           description: OK
           schema:
-            $ref: '#/definitions/Optional«Customer»'
-        '401':
+            $ref: "#/definitions/Optional«Customer»"
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
   /error:
@@ -113,15 +113,15 @@ paths:
       produces:
         - text/html
       responses:
-        '200':
+        "200":
           description: OK
           schema:
-            $ref: '#/definitions/ModelAndView'
-        '401':
+            $ref: "#/definitions/ModelAndView"
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
     head:
@@ -134,15 +134,15 @@ paths:
       produces:
         - text/html
       responses:
-        '200':
+        "200":
           description: OK
           schema:
-            $ref: '#/definitions/ModelAndView'
-        '204':
+            $ref: "#/definitions/ModelAndView"
+        "204":
           description: No Content
-        '401':
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
       deprecated: false
     post:
@@ -155,17 +155,17 @@ paths:
       produces:
         - text/html
       responses:
-        '200':
+        "200":
           description: OK
           schema:
-            $ref: '#/definitions/ModelAndView'
-        '201':
+            $ref: "#/definitions/ModelAndView"
+        "201":
           description: Created
-        '401':
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
     put:
@@ -178,17 +178,17 @@ paths:
       produces:
         - text/html
       responses:
-        '200':
+        "200":
           description: OK
           schema:
-            $ref: '#/definitions/ModelAndView'
-        '201':
+            $ref: "#/definitions/ModelAndView"
+        "201":
           description: Created
-        '401':
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
     delete:
@@ -199,15 +199,15 @@ paths:
       produces:
         - text/html
       responses:
-        '200':
+        "200":
           description: OK
           schema:
-            $ref: '#/definitions/ModelAndView'
-        '204':
+            $ref: "#/definitions/ModelAndView"
+        "204":
           description: No Content
-        '401':
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
       deprecated: false
     options:
@@ -220,15 +220,15 @@ paths:
       produces:
         - text/html
       responses:
-        '200':
+        "200":
           description: OK
           schema:
-            $ref: '#/definitions/ModelAndView'
-        '204':
+            $ref: "#/definitions/ModelAndView"
+        "204":
           description: No Content
-        '401':
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
       deprecated: false
     patch:
@@ -241,15 +241,15 @@ paths:
       produces:
         - text/html
       responses:
-        '200':
+        "200":
           description: OK
           schema:
-            $ref: '#/definitions/ModelAndView'
-        '204':
+            $ref: "#/definitions/ModelAndView"
+        "204":
           description: No Content
-        '401':
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
       deprecated: false
   /linemobile/addlinebycustomer/{id}:
@@ -261,7 +261,7 @@ paths:
       consumes:
         - application/json
       produces:
-        - '*/*'
+        - "*/*"
       parameters:
         - name: id
           in: path
@@ -274,21 +274,21 @@ paths:
           description: model
           required: true
           schema:
-            $ref: '#/definitions/LineMobileFrom'
+            $ref: "#/definitions/LineMobileFrom"
       responses:
-        '200':
+        "200":
           description: OK
           schema:
             type: object
             additionalProperties:
               type: object
-        '201':
+        "201":
           description: Created
-        '401':
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
   /linemobile/cancellinemobile/{id}:
@@ -300,7 +300,7 @@ paths:
       consumes:
         - application/json
       produces:
-        - '*/*'
+        - "*/*"
       parameters:
         - name: id
           in: path
@@ -309,19 +309,19 @@ paths:
           type: integer
           format: int32
       responses:
-        '200':
+        "200":
           description: OK
           schema:
             type: object
             additionalProperties:
               type: object
-        '201':
+        "201":
           description: Created
-        '401':
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
   /offer/addofferbyline/{id}/{code}:
@@ -333,7 +333,7 @@ paths:
       consumes:
         - application/json
       produces:
-        - '*/*'
+        - "*/*"
       parameters:
         - name: code
           in: path
@@ -347,19 +347,19 @@ paths:
           type: integer
           format: int32
       responses:
-        '200':
+        "200":
           description: OK
           schema:
             type: object
             additionalProperties:
               type: object
-        '201':
+        "201":
           description: Created
-        '401':
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
   /offer/cacheByCode/{code}:
@@ -369,7 +369,7 @@ paths:
       summary: findByCode
       operationId: findByCodeUsingGET
       produces:
-        - '*/*'
+        - "*/*"
       parameters:
         - name: code
           in: path
@@ -377,15 +377,15 @@ paths:
           required: true
           type: string
       responses:
-        '200':
+        "200":
           description: OK
           schema:
-            $ref: '#/definitions/Optional«Offer»'
-        '401':
+            $ref: "#/definitions/Optional«Offer»"
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
   /offer/cacheCatalog/:
@@ -395,19 +395,19 @@ paths:
       summary: findAll
       operationId: findAllUsingGET_1
       produces:
-        - '*/*'
+        - "*/*"
       responses:
-        '200':
+        "200":
           description: OK
           schema:
             type: array
             items:
-              $ref: '#/definitions/Offer'
-        '401':
+              $ref: "#/definitions/Offer"
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
   /reports/getLineMobilebydocument/{typedocument}/{numberdocument}:
@@ -417,7 +417,7 @@ paths:
       summary: findLineMobileByDocument
       operationId: findLineMobileByDocumentUsingGET
       produces:
-        - '*/*'
+        - "*/*"
       parameters:
         - name: numberdocument
           in: path
@@ -430,17 +430,17 @@ paths:
           required: true
           type: string
       responses:
-        '200':
+        "200":
           description: OK
           schema:
             type: array
             items:
-              $ref: '#/definitions/LineMobile'
-        '401':
+              $ref: "#/definitions/LineMobile"
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
   /reports/getOffersByDates/{datestart}/{dateend}:
@@ -450,7 +450,7 @@ paths:
       summary: getOffersByDates
       operationId: getOffersByDatesUsingGET
       produces:
-        - '*/*'
+        - "*/*"
       parameters:
         - name: dateend
           in: path
@@ -463,17 +463,17 @@ paths:
           required: true
           type: string
       responses:
-        '200':
+        "200":
           description: OK
           schema:
             type: array
             items:
-              $ref: '#/definitions/Customer'
-        '401':
+              $ref: "#/definitions/Customer"
+        "401":
           description: Unauthorized
-        '403':
+        "403":
           description: Forbidden
-        '404':
+        "404":
           description: Not Found
       deprecated: false
 definitions:
@@ -491,7 +491,7 @@ definitions:
       lineMobile:
         type: array
         items:
-          $ref: '#/definitions/LineMobile'
+          $ref: "#/definitions/LineMobile"
       numberdocument:
         type: string
       typedocument:
@@ -527,7 +527,7 @@ definitions:
       offer:
         type: array
         items:
-          $ref: '#/definitions/Offer'
+          $ref: "#/definitions/Offer"
       state:
         type: boolean
       typeplane:
@@ -628,7 +628,7 @@ definitions:
           - 510 NOT_EXTENDED
           - 511 NETWORK_AUTHENTICATION_REQUIRED
       view:
-        $ref: '#/definitions/View'
+        $ref: "#/definitions/View"
       viewName:
         type: string
     title: ModelAndView
